--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 <input type="text" placeholder="Name" name="name">
                 <input type="email" placeholder="Email" name="email">
                 <input type="text" placeholder="Subject" >
-                <textarea rows="6" placeholder="Type Message">
+                <textarea rows="6" placeholder="Type Message" name="message">
                 </textarea>
                 <button>Send Message</button>
             </form>
