--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 <h2>Get in touch</h2>
                 <input type="text" placeholder="Name" name="name">
                 <input type="email" placeholder="Email" name="email">
-                <input type="number" placeholder="Subject" >
+                <input type="number" placeholder="Number of order" >
                 <textarea rows="6" placeholder="Type Message" name="message">
                 </textarea>
                 <button>Send Message</button>
