--- a/index.html
+++ b/index.html
@@ -289,9 +289,9 @@
                 <input type="text" placeholder="Name" name="name">
                 <input type="email" placeholder="Email" name="email">
                 <input type="text" placeholder="Subject" >
-                <textarea rows="6" placeholder="Type Message" name="message">
+                <textarea name="message" rows="6" placeholder="Type Message" >
                 </textarea>
-                <button>Send Message</button>
+                <button type="submit">Send Message</button>
             </form>
 
         </div>
