--- a/index.html
+++ b/index.html
@@ -284,14 +284,15 @@
 
         </div>
         <div class="contact_col">
+              <h2>Get in touch</h2>
             <form name="contact" method="POST" data-netlify="true">
-                <h2>Get in touch</h2>
+              
                 <input type="text" placeholder="Name" name="name">
                 <input type="email" placeholder="Email" name="email">
                 <input type="text" placeholder="Subject" >
                 <textarea name="message" rows="6" placeholder="Type Message" >
                 </textarea>
-                <button type="submit">Send Message</button>
+                <button type="submit" value="send message">Send Message</button>
             </form>
 
         </div>
