--- a/index.html
+++ b/index.html
@@ -287,10 +287,10 @@
               <h2>Get in touch</h2>
             <form name="contact" method="POST" data-netlify="true">
               
-                <input type="text" placeholder="Name" name="name">
-                <input type="email" placeholder="Email" name="email">
-                <input type="text" placeholder="Subject" >
-                <textarea name="message" rows="6" placeholder="Type Message" >
+                <input type="text" placeholder="name" name="name">
+                <input type="email" placeholder="email" name="email">
+                <input type="text" placeholder="subject" >
+                <textarea name="message" rows="6" placeholder="message" >
                 </textarea>
                 <button type="submit" value="send message">Send Message</button>
             </form>
