--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 <input type="text" placeholder="name" name="name">
                 <input type="email" placeholder="email" name="email">
                 <input type="number" placeholder="mobile" >
-                <textarea name="message" rows="6" placeholder="message" >
+                <textarea name="message" rows="6" cols="10" placeholder="message" >
                 </textarea>
                 <button type="submit" value="send message">Send Message</button>
             </form>
