--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
               
                 <input type="text" placeholder="name" name="name">
                 <input type="email" placeholder="email" name="email">
-                <input type="number" placeholder="mobile" >
+                <input type="text" placeholder="subject" >
                 <textarea name="message" rows="6" cols="10" placeholder="message" >
                 </textarea>
                 <button type="submit" value="send message">Send Message</button>
