--- a/index.html
+++ b/index.html
@@ -289,10 +289,10 @@
               
                 <input type="text" placeholder="name" name="name">
                 <input type="email" placeholder="email" name="email">
-                <input type="text" placeholder="subject" >
-                <textarea name="message" rows="6" cols="10" placeholder="message" >
+                <input type="number" placeholder="number">
+                <textarea name="message" placeholder="message" cols="10" rows="6">
                 </textarea>
-                <button type="submit" value="send message">Send Message</button>
+                <button type="submit" value="send message">send Message</button>
             </form>
 
         </div>
