--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         </div>
         <div class="contact_col">
               <h2>Get in touch</h2>
-            <form name="contact" method="POST" data-netlify="true">
+            <form action="https://formspree.io/f/xyzzveyo method="POST" >
               
                 <input type="text" placeholder="name" name="name">
                 <input type="email" placeholder="email" name="email">
