--- a/index.html
+++ b/index.html
@@ -285,11 +285,11 @@
         </div>
         <div class="contact_col">
               <h2>Get in touch</h2>
-            <form action="https://formspree.io/f/xyzzveyo method="POST" >
+           <form action="https://formsubmit.co/nafisaislam_47@yahoo.com" method="POST" />
               
                 <input type="text" placeholder="name" name="name">
-                <input type="email" placeholder="email" name="email">
-                <input type="text" placeholder="subject">
+                <input type="email" placeholder="Email Address" name="email">
+                <input type="text" placeholder="subject" name="subject">
                 <textarea name="message" placeholder="message" cols="10" rows="6">
                 </textarea>
                 <button type="submit" value="send message">send message</button>
