--- a/index.html
+++ b/index.html
@@ -293,6 +293,8 @@
                 <textarea name="message" placeholder="message" cols="10" rows="6">
                 </textarea>
                 <button type="submit" value="send message">send message</button>
+                <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
+               
             </form>
 
         </div>
