--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 <textarea name="message" placeholder="message" cols="10" rows="6">
                 </textarea>
                 <button type="submit" value="send message">send message</button>
-                <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
+                <input type="hidden" name="_next" value="https://github.com/nafisaislam47/nafisa-restaurant.co/thanks.html">
                
             </form>
 
